--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,9 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+# Ignore sensitive config
+src/main/resources/application.properties
+
+
 ### VS Code ###
 .vscode/
